# transcribe-soap-notes

./: .env.sample  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  NGROK_SETUP.md  README.md  SETUP.md  api_server.py  cli.py  docker-compose.override.yml  docker-compose.yml  docker-run.ps1  docker-run.sh  download_models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_with_ngrok.py  setup.py
ai_scribe/: __init__.py  align.py  config.py  diarize.py  pipeline.py  speaker_roles.py  summarise.py  transcribe.py
frontend/: index.html
